examples/passing/2138.purs
module Main where

import Effect.Console (log)

import Lib (A(B,C))

main = log "Done"
