examples/failing/ImportHidingModule.purs
-- @shouldFailWith ImportHidingModule
module Main where

import B hiding (module A)
